# Market_Research

./: Makefile  README.md  pyproject.toml  requirements.txt
Market_Research/: __init__.py  dataset.py  features.py  plots.py
Market_Research/modeling/: predict.py  train.py
Market_Research_helper/: __init__.py  dataset.py  functions.py  plots.py
Market_Research_helper/modeling/: predict.py  train.py
notebooks/: Data_1.ipynb  volatility.ipynb
